<resources>
    <string name="app_name">FuelMonitoringAppVer05</string>

    <string name="Kilometer_Per_Liter">Kilometer Per Liter</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Millage">Millage</string>
    <string name="Price_Per_Liter">Price Per Liter</string>
    <string name="Number_of_Liter">Number of Liter</string>
    <string name="Gas_Station">Gas Station</string>
    <string name="Gas_Type">Gas Type</string>
    <string name="Branch">Branch</string>
    <string name="Save">Save</string>
    <string name="View">View</string>
    <string name="Date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="textview">TextView</string>
    <string name="thank_you_for_using">Thank you for Using</string>

    <string name="FullName">Full Name</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Email">Email</string>
    <string name="Vehicle_Name">Vehicle Name</string>
    <string name="Vehicle_Model">Vehicle Model</string>
    <string name="Plate_Number">Vehicle Plate #</string>

    <string name="UsernameEmail">Username / Email</string>
    <string name="Password">Password</string>

    //NOTES
    <string name="For_Updating">Should be automated</string>
    <string name="kilometer_Per_Liter">millage / Number of Liters</string>



</resources>