<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/white"
    tools:context=".ConsumptionDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/Total_Amount"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField1"
            app:layout_constraintTop_toBottomOf="@+id/textField1">

            <TextView
                android:id="@+id/tfvTotalAmountShow"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Total_Amount"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvTotalAmountShow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Total_Amount"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Millage"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField2"
            app:layout_constraintTop_toBottomOf="@+id/textField2">

            <TextView
                android:id="@+id/tfvMillage"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Millage"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvMillage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Millage"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Price_Per_Liter"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField3"
            app:layout_constraintTop_toBottomOf="@+id/textField3">

            <TextView
                android:id="@+id/tfvPricePerLiter"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Price_Per_Liter"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvPricePerLiter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Price_Per_Liter"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Gas_Type"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField4"
            app:layout_constraintTop_toBottomOf="@+id/textField4">

            <TextView
                android:id="@+id/tfvGasType"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Gas_Type"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvGasType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Gas_Type"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Number_of_Liter"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField5"
            app:layout_constraintTop_toBottomOf="@+id/textField5">

            <TextView
                android:id="@+id/tfvNumberOfLiter"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Price_Per_Liter"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvNumberOfLiter"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Number_of_Liter"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Gas_Station"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField6"
            app:layout_constraintTop_toBottomOf="@+id/textField6">

            <TextView
                android:id="@+id/tfvGasStation"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Gas_Station"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvGasStation"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Gas_Station"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Branch"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintStart_toStartOf="@+id/textField7"
            app:layout_constraintTop_toBottomOf="@+id/textField7">

            <TextView
                android:id="@+id/tfvBranch"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Branch"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvBranch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Branch"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/Date"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintEnd_toEndOf="@+id/textField8"
            app:layout_constraintStart_toStartOf="@+id/textField8"
            app:layout_constraintTop_toBottomOf="@+id/textField8">

            <TextView
                android:id="@+id/tfvDate"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Date"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/Date"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:hint="@string/Kilometer_Per_Liter"
            android:textColorHint="@color/Gray"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/Gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tfvKmPerLiterShow"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/Kilometer_Per_Liter"
                android:textColor="@color/Gray"
                android:textSize="12sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/tvKmPerLiterShow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:text="@string/For_Updating"
                android:textColor="@color/black"
                android:textColorHint="@color/Gray"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="GAS UP INFORMATION"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textField1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>