<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgBtnCancel"
        android:layout_width="22dp"
        android:layout_height="24dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgBtnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgBtnSave"
        app:srcCompat="@drawable/baseline_cancel_24" />

    <ImageView
        android:id="@+id/imgBtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_add_24" />

    <ImageView
        android:id="@+id/imgProfilePhoto"
        android:layout_width="120dp"
        android:layout_height="128dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgVehiclePhoto"
        android:layout_width="192dp"
        android:layout_height="127dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfilePhoto"
        app:layout_constraintStart_toEndOf="@+id/imgProfilePhoto"
        app:layout_constraintTop_toTopOf="@+id/imgProfilePhoto"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="PROFILE"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/FullName"
        android:textColorHint="@color/Gray"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/Gray"
        app:layout_constraintStart_toStartOf="@+id/imgProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/imgProfilePhoto">

        <EditText
            android:id="@+id/tvFullname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="7dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/Mobile_number"
        android:textColorHint="@color/Gray"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="@+id/textField1"
        app:layout_constraintStart_toStartOf="@+id/textField1"
        app:layout_constraintTop_toBottomOf="@+id/textField1">

        <EditText
            android:id="@+id/tvMobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="7dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:textColorHint="@color/Gray"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="@+id/textField2"
        app:layout_constraintStart_toStartOf="@+id/textField2"
        app:layout_constraintTop_toBottomOf="@+id/textField2">

        <EditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            tools:layout_editor_absoluteX="286dp"
            tools:layout_editor_absoluteY="7dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/Vehicle_Name"
        android:textColorHint="@color/Gray"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="@+id/textField3"
        app:layout_constraintStart_toStartOf="@+id/textField3"
        app:layout_constraintTop_toBottomOf="@+id/textField3">

        <EditText
            android:id="@+id/tvVehicleName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="34dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/Vehicle_Model"
        android:textColorHint="@color/Gray"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="@+id/textField4"
        app:layout_constraintStart_toStartOf="@+id/textField4"
        app:layout_constraintTop_toBottomOf="@+id/textField4">

        <EditText
            android:id="@+id/tvVehicleModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            tools:layout_editor_absoluteX="287dp"
            tools:layout_editor_absoluteY="34dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/Plate_Number"
        android:textColorHint="@color/Gray"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/Gray"
        app:layout_constraintEnd_toEndOf="@+id/textField5"
        app:layout_constraintStart_toStartOf="@+id/textField5"
        app:layout_constraintTop_toBottomOf="@+id/textField5">

        <EditText
            android:id="@+id/tvVehiclePlate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/Gray"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="34dp" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>